--- a/src/css/section/aboutme.css
+++ b/src/css/section/aboutme.css
@@ -1,217 +1,93 @@
+@font-face {
+    font-family: 'GowunBatang-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/GowunBatang-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 #aboutme {
     width: 100%;
+    height: 100vh;
+    overflow: hidden;
     background: url(../../img/note.png);
 }
 
-.about_inner {
-    width: 90%;
-    position: relative;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-}
-
-.about_gm {
-    position: sticky;
-    top: 200px;
-    left: 190px;
-    width: 30%;
-    height: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 100px;
-}
-
-.about_gm .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
+.aboutme_inner {
     width: 100%;
     height: 100%;
-    border-radius: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
+    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    transition: opacity 0.3s ease;
 }
 
-.overlay .text {
-    font-size: 24px;
+.ab_left {
+    width: 40%;
+    height: 100%;
+}
+
+.ab_right {
+    width: 60%;
+    height: 100%;
+    border: 1px solid #000;
+    display: flex;
+}
+
+.ab_right .ri1,
+.ab_right .ri2 {
+    width: 50%;
+    height: 100%;
+}
+
+.ab_title p {
+    font-family: 'GowunBatang-Regular';
+    font-weight: bold;
+    font-size: 2.5rem;
     text-align: center;
 }
 
-.about_gm:hover .overlay {
-    opacity: 1;
+.ab_me {
+    text-align: center;
+    width: 100%;
+    height: 40%;
 }
 
-.about_gm img {
+.ab_me img {
+    height: 100%;
+}
+
+.ab_content {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-}
-
-.about_desc {
-    width: 50%;
-}
-
-.about_desc .time_line {
-    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
 
-.time_line h3 {
-    font-size: 3vw;
-    color: #000;
-    font-family: var(--subKor-font);
+.ab_content p {
+    width: 65%;
+    padding: 10px 0;
 }
 
-.me_content {
+.ab_content .ppp {
+    font-size: 20px;
+}
+
+.aboutme_inner h4 {
     font-size: 25px;
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-}
-
-.time_line:nth-child(2) {
-    margin-left: 15px
-}
-
-.time_line h1 {
-    font-family: var(--subKor-font);
-    font-size: 2vw;
-    color: var(--mainBg-color);
-}
-
-td {
-    padding: 8px;
-    font-family: var(--mainKor-font);
-    font-size: 18px;
-}
-
-th {
-    text-align: left;
-}
-
-.skills-container {
-    position: relative;
-    width: 37vw;
-    height: 28vw;
-    background: url(../../img/skillbox.png) no-repeat center center;
-    background-size: contain;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    top: -35px;
-}
-
-.skills-title {
-    position: absolute;
-    top: -28px;
-    left: 105px;
-    font-size: 3vw;
+    font-family: 'GowunBatang-Regular';
     font-weight: bold;
-    font-family: var(--mainEng-font);
 }
 
-.skills-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-top: 80px;
-}
-
-.skill img {
-    width: 70%;
-    height: 70%;
-}
-
-.skill {
-    width: 9vw;
-    height: 9vw;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-}
-
-.about_desc .time_intro {
-    height: 100vh;
+.ri1 {
+    border: 1px solid #000;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 
-@media screen and (max-width:1024px) {
-    
-}
-
-@media screen and (max-width:768px) {
-    .about_gm {
-        left: 10%;
-        width: 40%;
-    }
-
-    .about_gm img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-
-    .overlay .text {
-        display: none;
-    }
-
-    .time_line h3 {
-        font-size: 22px;
-    }
-
-    .me_content {
-        font-size: 15px;
-        padding: 10px;
-    }
-
-    td {
-        font-family: var(--mainKor-font);
-        font-size: 15px;
-    }
-
-    .skills-container {
-        background-image: none;
-    }
-
-    .skills-title {
-        left: 70px;
-        font-size: 20px;
-        -webkit-text-stroke-width: 1px;
-    }
-
-    .skills-grid {
-        padding-top: 20px;
-    }
-
-    .skill {
-        width: 35%;
-        height: 40%;
-        margin-left: 20px;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-    }
+.ri2 {
+    border: 1px solid #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
