--- a/src/css/section/publishing.css
+++ b/src/css/section/publishing.css
@@ -1,44 +1,76 @@
+@font-face {
+    font-family: 'TTTogether';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/TTTogetherA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 #publishing {
     width: 100%;
     height: 100vh;
     overflow: hidden;
     background: url(../../img/note.png);
     position: relative;
-    padding-top: 30px;
 }
 
-.pb_title {
+.publishing_inner {
     width: 100%;
-    height: 6vw;
-    display: flex;
+    height: 100%;
+    position: relative;
 }
 
-.pb_title .line {
-    width: 90%;
-    height: .2vw;
-    border: .3vw solid #000;
-    margin-top: 2.5vw;
+.pb_bk {
+    background: #000;
+    width: 40%;
+    height: 100%;
+    position: absolute;
+    z-index: 99;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.pb_title p {
-    font-size: 4vw;
-}
-
-.background-text {
+.btn-shine{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 10vw;
-    color: rgb(199, 252, 210);
-    z-index: 0;
-    pointer-events: none;
+    padding: 10px 20px;
+    color: #fff;
+    background: linear-gradient(to right, #4d4d4d 0, white 10%, #4d4d4d 20%);
+    background-position: 0;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 3s infinite linear;
+    animation-fill-mode: forwards;
+    -webkit-text-size-adjust: none;
+    font-weight: 600;
+    font-size: 30px;
+    text-decoration: none;
+    white-space: nowrap;
+    border: 2px solid #fff;
+    border-radius: 50px;
     font-family: var(--subEng-font);
+}
+
+@keyframes shine {
+    0%{
+        background-position: 0;
+    }
+    60%{
+        background-position: 180px;
+    }
+    100%{
+        background-position: 180px;
+    }
 }
 
 .pub_wrap {
     display: flex;
-    width: 4800px;
+    width: 4000px;
+    height: 100%;
+    position: absolute;
+    left: 600px;
+    top: 65px;
 }
 
 .pub_item {
