--- a/src/css/section/aboutme.css
+++ b/src/css/section/aboutme.css
@@ -1,8 +1,31 @@
 @font-face {
-    font-family: 'GowunBatang-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/GowunBatang-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'MaruBuri';
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Regular.eot);
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Regular.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Regular.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Regular.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Regular.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: 'MaruBuriSemiBold';
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.eot);
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: 'MaruBuriBold';
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.eot);
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: 'MaruBuriLight';
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.eot);
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: 'MaruBuriExtraLight';
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.eot);
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.ttf) format("truetype");
 }
 
 #aboutme {
@@ -17,17 +40,17 @@
     height: 100%;
     position: relative;
     display: flex;
+    align-items: center;
 }
 
 .ab_left {
     width: 40%;
-    height: 100%;
+    height: 90%;
 }
 
 .ab_right {
     width: 60%;
-    height: 100%;
-    border: 1px solid #000;
+    height: 90%;
     display: flex;
 }
 
@@ -37,10 +60,14 @@
     height: 100%;
 }
 
+.ri1 p,
+.ri2 p {
+    font-family: 'MaruBuri';
+}
+
 .ab_title p {
-    font-family: 'GowunBatang-Regular';
-    font-weight: bold;
-    font-size: 2.5rem;
+    font-family: 'MaruBuriBold';
+    font-size: 2rem;
     text-align: center;
 }
 
@@ -51,7 +78,17 @@
 }
 
 .ab_me img {
+    animation: wave 2s infinite alternate;
     height: 100%;
+}
+
+@keyframes wave {
+    0% {
+        transform: translateX(-20px) rotate(-10deg);
+    }
+    100% {
+        transform: translateX(20px) rotate(10deg);
+    }
 }
 
 .ab_content {
@@ -64,30 +101,58 @@
 
 .ab_content p {
     width: 65%;
-    padding: 10px 0;
+    padding: 7px 0;
+    font-size: 15px;
+    font-family: 'MaruBuri';
 }
 
 .ab_content .ppp {
     font-size: 20px;
+    font-family: 'MaruBuriBold';
 }
 
 .aboutme_inner h4 {
     font-size: 25px;
-    font-family: 'GowunBatang-Regular';
+    font-family: 'MaruBuriBold';
     font-weight: bold;
 }
 
-.ri1 {
-    border: 1px solid #000;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+span.date {
+    font-family: 'MaruBuriBold';
 }
 
-
-.ri2 {
-    border: 1px solid #000;
+.ab_detail,
+.ab_cer,
+.ab_skill,
+.ab_edu,
+.ab_car,
+.ab_key {
+    height: 33.33%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+}
+
+.ab_skill img {
+    width: 200px;
+    height: 140px;
+}
+
+/* 애니메이션을 위한 초기 설정 */
+.ab_detail,
+.ab_cer,
+.ab_skill,
+.ab_edu,
+.ab_car,
+.ab_key {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+/* 보이는 상태의 스타일 */
+.show {
+    opacity: 1;
+    transform: translateY(0);
 }
