--- a/src/css/section/project.css
+++ b/src/css/section/project.css
@@ -16,7 +16,7 @@
 
 #project {
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,10 +24,19 @@
     position: relative;
 }
 
+.pro_title {
+    position: absolute;
+    top: 50px;
+    left: 68px;
+}
+
 #home-slider {
     height: 80vh;
     width: 90vw;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .swiper-wrapper {
@@ -40,6 +49,20 @@
 .swiper-container {
     height: 100%;
     width: 100%;
+}
+
+.mask {
+    width: 190px;
+    height: 60px;
+    position: absolute;
+    top: 105px;
+    right: 260px;
+    z-index: 90;
+}
+
+.mask img {
+    width: 100%;
+    height: 100%;
 }
 
 .swiper-image {
@@ -68,9 +91,8 @@
     transition-delay: .5s;
 }
 
-
 .swiper-image-inner.swiper-image-right {
-    background-color: pink;
+    background-color: #000;
     width: 81%;
     height: 100%;
     float: right;
@@ -95,10 +117,12 @@ h2.happy {
     margin: 0;
     text-align: center;
     font-family: 'TTTogether';
+    color: #fff;
 }
 
 
 p.paragraph {
+    color: #fff;
     margin: 0;
     width: 100%;
     max-width: 350px;
@@ -110,6 +134,17 @@ p.paragraph {
     margin-top: 20px;
     opacity: 0;
     font-family: 'GowunBatang-Regular';
+}
+
+.swiper-image-right a {
+    color: #fff;
+    padding: 5px;
+    margin-top: 20px;
+}
+
+.swiper-image-right a:hover {
+    border-bottom: 1px solid #fff;
+    color: pink;
 }
 
 div.swiper-image img {
@@ -133,10 +168,6 @@ div.swiper-image img {
     overflow: hidden;
     z-index: 1;
 }
-
-/* .swiper-container-no-flexbox .swiper-slide {
-    float: left;
-} */
 
 .swiper-container-vertical>.swiper-wrapper {
     -webkit-box-orient: vertical;
@@ -196,12 +227,10 @@ div.swiper-image img {
     -webkit-flex-shrink: 0;
     flex-shrink: 0;
     position: relative;
-    /* background-color: pink; */
     overflow: hidden;
     display: flex;
 }
 
-/* Auto Height */
 .swiper-container-autoheight,
 .swiper-container-autoheight .swiper-slide {
     height: auto;
@@ -219,8 +248,6 @@ div.swiper-image img {
     transition-property: transform, height;
 }
 
-
-/* Pagination Styles */
 .swiper-pagination {
     position: absolute;
     text-align: center;
@@ -239,7 +266,6 @@ div.swiper-image img {
     opacity: 1;
 }
 
-/* Common Styles */
 .swiper-pagination-fraction,
 .swiper-pagination-custom,
 .swiper-container-horizontal>.swiper-pagination-bullets {
@@ -248,7 +274,6 @@ div.swiper-image img {
     width: 100%;
 }
 
-/* Bullets */
 .swiper-pagination-bullet {
     width: 20px;
     height: 20px;
@@ -301,4 +326,92 @@ button.swiper-pagination-bullet {
 
 .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
     margin: 0 5px;
+}
+
+@media screen and (max-width: 1024px) {
+    .pro_title {
+        width: 25%;
+        left: 25px;
+    }
+    .pro_title img{
+        width: 100%;
+        height: 100%;
+    }
+    .mask{
+        display: none;
+    }
+    .swiper-image-inner.swiper-image-left{
+        width: 100%;
+    }
+
+    .swiper-image-inner.swiper-image-right {
+        width: 90%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: -440px; /* right 값을 설정하여 태블릿 화면에서도 보이도록 조정 */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transition: all .5s linear;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .swiper-container {
+        width: 100%;
+        height: 80vh;
+    }
+    
+    .swiper-wrapper {
+        flex-direction: column;
+    }
+
+    .swiper-image {
+        width: 100%;
+        height: 45%;
+    }
+
+    .swiper-image-inner {
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+        position: relative;
+    }
+
+    .swiper-image-inner.swiper-image-left {
+        width: 100%;
+        padding: 1rem 0;
+    }
+
+    .swiper-image-inner.swiper-image-right {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        right: -22px;
+        top: 220px;
+        padding: 1rem 0;
+        background-color: #000;
+        margin-top: auto;
+    }
+
+    h1, p.paragraph, h2.happy {
+        text-align: center;
+        transform: none;
+        opacity: 1;
+    }
+
+    h2.happy{
+        font-size: 1.5rem;
+    }
+
+    p.paragraph{
+        font-size: 1rem;
+    }
+
+    .swiper-pagination {
+        display: none;
+    }
+
 }
