--- a/src/css/section/publishing.css
+++ b/src/css/section/publishing.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background: url(../../img/note.png);
+    background: #000;
     position: relative;
 }
 
@@ -29,7 +29,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.btn-shine{
+.btn-shine {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -38,7 +38,7 @@
     color: #fff;
     background: linear-gradient(to right, #4d4d4d 0, white 10%, #4d4d4d 20%);
     background-position: 0;
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: shine 3s infinite linear;
     animation-fill-mode: forwards;
@@ -53,65 +53,42 @@
 }
 
 @keyframes shine {
-    0%{
+    0% {
         background-position: 0;
     }
-    60%{
+
+    60% {
         background-position: 180px;
     }
-    100%{
+
+    100% {
         background-position: 180px;
     }
 }
 
 .pub_wrap {
     display: flex;
-    width: 4000px;
-    height: 100%;
+    width: 3300px;
     position: absolute;
     left: 600px;
-    top: 65px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .pub_item {
-    width: 400px;
-    height: 80vh;
-    padding: 2.5rem;
+    width: 350px;
+    height: 100%;
     margin-right: 20px;
     position: relative;
     z-index: 1;
-}
-
-.pub_item .title {
-    font-size: 1.5rem;
-    text-align: center;
-    padding: .8rem 0;
-    font-weight: 700;
-    color: var(--black100);
-    border-bottom: 2px solid var(--black100);
-}
-
-.pub_item .desc {
-    font-size: 1.2rem;
-}
-
-.pub_item .num {
-    font-size: 2rem;
-    font-family: var(--mainNum-font);
-}
-
-.pub_item .site {
-    border: 1px solid var(--black100);
-    display: block;
-    text-align: center;
-    padding: .5rem 1.5rem;
-    margin-top: 1.5rem;
+    padding: 20px;
 }
 
 .pub_item .img {
     display: block;
     margin-top: -20px;
     transition: .35s;
+    width: 350px;
 }
 
 .pub_item:hover .img {
@@ -121,6 +98,8 @@
 .pub_item .img img {
     filter: saturate(0%);
     transition: .2s;
+    width: 100%;
+    height: 100%;
 }
 
 .pub_item:hover img {
@@ -134,7 +113,7 @@
 p.img_text {
     width: 60%;
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 3vw;
@@ -150,10 +129,6 @@ p.img_text {
     opacity: 1;
 }
 
-.p3 .img_text,
-.p8 .img_text {
-    line-height: 100%;
-}
 
 @media screen and (min-width:767px) {
     .pub_item {
@@ -190,33 +165,44 @@ p.img_text {
 }
 
 @media screen and (max-width:768px) {
-    .pub_title {
-        width: 100%;
-        height: auto;
-        margin-bottom: 16px;
-        font-size: 30px;
-        top: 68px;
-        background-color: var(--mainBg-color);
-    }
-
-    .pub_item {
-        width: 300px;
-        padding: 40px 30px;
-        height: auto;
+    .pub_item{
+        width: 3000px;
+        position: relative;
     }
 
     .pub_item .img {
         margin: auto;
-        width: 40vw;
+        width: 50vw;
     }
 
-    .img img {
+    .pub_item .img img {
         width: 100%;
         height: 100%;
+        filter: saturate(100%);
     }
 
     p.img_text {
-        font-size: 5vw;
+        opacity: 1;
+        font-size: 7vw;
+        text-align: center;
+        border: 1px solid #000;
+    }
+
+    .pb_bk {
+        width: 100%;
+        height: 50%;
+    }
+
+    .pub_wrap {
+        width: 100%;
+        height: 50%;
+        position: relative;
+    }
+
+    .pub_item {
+        position: relative;
+        top: 160px;
+        left: 0;
     }
 
 }
