--- a/src/css/section/aboutme.css
+++ b/src/css/section/aboutme.css
@@ -5,27 +5,9 @@
 }
 
 @font-face {
-    font-family: 'MaruBuriSemiBold';
-    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.eot);
-    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-SemiBold.ttf) format("truetype");
-}
-
-@font-face {
     font-family: 'MaruBuriBold';
     src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.eot);
     src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Bold.ttf) format("truetype");
-}
-
-@font-face {
-    font-family: 'MaruBuriLight';
-    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.eot);
-    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Light.ttf) format("truetype");
-}
-
-@font-face {
-    font-family: 'MaruBuriExtraLight';
-    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.eot);
-    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.ttf) format("truetype");
 }
 
 #aboutme {
@@ -139,7 +121,6 @@ span.date {
     height: 140px;
 }
 
-/* 애니메이션을 위한 초기 설정 */
 .ab_detail,
 .ab_cer,
 .ab_skill,
@@ -151,8 +132,101 @@ span.date {
     transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
-/* 보이는 상태의 스타일 */
 .show {
     opacity: 1;
     transform: translateY(0);
+}
+
+@media screen and (max-width: 768px) {
+    #aboutme {
+        height: auto;
+        padding: 20px;
+        background-size: cover;
+    }
+
+    .aboutme_inner {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+    }
+
+    .ab_left {
+        width: 90%;
+        text-align: center;
+        height: auto;
+    }
+
+    .ab_right {
+        width: 100%;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .ab_right .ri1,
+    .ab_right .ri2 {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .ab_title p {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+
+    .ab_me {
+        width: 100%;
+        height: auto;
+    }
+
+    .ab_me img {
+        height: 150px;
+        width: auto;
+        animation: wave 2s infinite alternate;
+    }
+
+    .ab_content {
+        width: 100%;
+        padding: 10px;
+        text-align: center;
+    }
+
+    .ab_content p {
+        width: 90%;
+        font-size: 14px;
+    }
+
+    .ab_content .ppp {
+        font-size: 18px;
+    }
+
+    .aboutme_inner h4 {
+        font-size: 20px;
+    }
+
+    .ab_detail,
+    .ab_cer,
+    .ab_skill,
+    .ab_edu,
+    .ab_car,
+    .ab_key {
+        height: auto;
+        padding: 10px 0;
+    }
+
+    .ab_skill img {
+        width: 150px;
+        height: auto;
+    }
+
+    .ab_detail,
+    .ab_cer,
+    .ab_skill,
+    .ab_edu,
+    .ab_car,
+    .ab_key {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
