--- a/src/css/section/project.css
+++ b/src/css/section/project.css
@@ -45,8 +45,8 @@
     width: 190px;
     height: 60px;
     position: absolute;
-    top: 105px;
-    right: 260px;
+    top: 115px;
+    right: 240px;
     z-index: 90;
 }
 
@@ -86,6 +86,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 5px;
 }
 
 
@@ -244,8 +245,9 @@ div.swiper-image img {
 
 @media screen and (max-width: 1024px) {
     .pro_title {
-        width: 25%;
+        width: 20%;
         left: 25px;
+        top: 0;
     }
 
     .pro_title img {
@@ -263,14 +265,21 @@ div.swiper-image img {
 
     .swiper-image-inner.swiper-image-right {
         width: 90%;
-        height: 50%;
+        height: 40%;
+    }
+    .swiper-pagination {
+        display: none;
     }
 }
 
 @media screen and (max-width: 768px) {
+    #project {
+        padding-bottom: 70px;
+    }
+
     .swiper-container {
         width: 100%;
-        height: 80vh;
+        height: 100vh;
     }
 
     .swiper-image {
@@ -298,7 +307,6 @@ div.swiper-image img {
     .swiper-image-inner.swiper-image-right {
         width: 100%;
         height: auto;
-        padding: 1rem;
         background-color: #000;
     }
 
