--- a/src/css/section/publishing.css
+++ b/src/css/section/publishing.css
@@ -165,6 +165,11 @@ p.img_text {
 }
 
 @media screen and (max-width:768px) {
+    .pub_wrap{
+        width: 3000px;
+        position: relative;
+    }
+
     .pub_item .img {
         margin: auto;
         width: 50vw;
@@ -185,6 +190,12 @@ p.img_text {
     .pb_bk {
         width: 100%;
         height: 50%;
+    }
+
+    .pub_wrap {
+        width: 100%;
+        height: 50%;
+        position: relative;
     }
 
     .pub_item {
